@@ -65,15 +65,6 @@
 			<RegExp input="$$10" output="&lt;runtime&gt;\1&lt;/runtime&gt;" dest="5+">
 				<expression>(.+)</expression>
 			</RegExp>
-			<RegExp input="$$1" output="\1" dest="10">
-				<expression clear="yes" fixchars="1">&quot;tagline&quot;:&quot;([^&quot;]*)</expression>
-			</RegExp>
-			<RegExp input="$$10" output="&lt;url function=&quot;ParseFallbackTMDBTagline&quot; cache=&quot;tmdb-en-$$2.json&quot;&gt;http://api.themoviedb.org/3/movie/$$2?api_key=57983e31fb435df4df77afb854740ea9&amp;amp;language=en&lt;/url&gt;" dest="5+">
-				<expression>^$</expression>
-			</RegExp>
-			<RegExp input="$$10" output="&lt;tagline&gt;\1&lt;/tagline&gt;" dest="5+">
-				<expression>(.+)</expression>
-			</RegExp>
 			<RegExp input="$$1" output="\1" dest="7">
 				<expression clear="yes" noclean="1">&quot;production_companies&quot;:\[([^\]]*)</expression>
 			</RegExp>
@@ -108,6 +99,9 @@
 				<expression />
 			</RegExp>
 			<RegExp input="$$2" output="&lt;chain function=&quot;GetTMDBPlotByIdChain&quot;&gt;$$2&lt;/chain&gt;" dest="5+">
+				<expression />
+			</RegExp>
+			<RegExp input="$$2" output="&lt;chain function=&quot;GetTMDBTaglineByIdChain&quot;&gt;$$2&lt;/chain&gt;" dest="5+">
 				<expression />
 			</RegExp>
 			<RegExp input="$$2" output="&lt;chain function=&quot;GetTMDBCastByIdChain&quot;&gt;$$2&lt;/chain&gt;" dest="5+">
@@ -154,12 +148,4 @@
 			<expression noclean="1" />
 		</RegExp>
 	</ParseFallbackTMDBRuntime>
-	<ParseFallbackTMDBTagline dest="5">
-		<RegExp input="$$2" output="&lt;details&gt;\1&lt;/details&gt;" dest="5">
-			<RegExp input="$$1" output="&lt;tagline&gt;\1&lt;/tagline&gt;" dest="2">
-				<expression fixchars="1">&quot;tagline&quot;:&quot;([^&quot;]*)</expression>
-			</RegExp>
-			<expression noclean="1" />
-		</RegExp>
-	</ParseFallbackTMDBTagline>
 </scraper>
