@@ -4,15 +4,15 @@
     <setting type="sep"/>
       <setting label="30023" type="labelenum" values="IMDb|themoviedb.org" id="titlesource" default="IMDb"/>
       <setting label="30008" type="labelenum" values="Keep Original|USA / International|Argentina|Austria|Belgium|Brazil|Bulgaria|Canada|China|Colombia|Chile|Croatia|Czech Republic|Denmark|Finland|France|Germany|Greece|Hong Kong|Hungary|Iceland|India|Israel|Italy|Japan|Mexico|Netherlands|Norway|Pakistan|Poland|Portugal|Romania|Russia|Serbia|Singapore|Slovenia|Spain|Sweden|Switzerland|Thailand|Turkey|Uruguay|Venezuela" id="imdbakatitles" default="Keep Original" visible="eq(-1,0)"/>
-      <setting label="30027" type="labelenum" values="cs|da|de|el|en|es|fi|fr|he|hr|hu|it|ja|ko|nl|no|pl|pt|ru|sl|sv|tr|zh" id="tmdbtitlelanguage" default="en" visible="eq(-2,1)"/>
+      <setting label="30027" type="labelenum" values="bg|cs|da|de|el|en|es|fi|fr|he|hr|hu|it|ja|ko|nl|no|pl|pt|ru|sl|sv|th|tr|zh" id="tmdbtitlelanguage" default="en" visible="eq(-2,1)"/>
     <setting type="sep"/>
       <setting label="30014" type="labelenum" values="IMDb|themoviedb.org|Rotten Tomatoes|trakt.tv|OFDb.de|port.hu" id="plotsource" default="IMDb"/>
-      <setting label="30020" type="labelenum" values="cs|da|de|el|en|es|fi|fr|he|hr|hu|it|ja|ko|nl|no|pl|pt|ru|sl|sv|tr|zh" id="tmdbplotlanguage" default="en" visible="eq(-1,1)"/>
+      <setting label="30020" type="labelenum" values="bg|cs|da|de|el|en|es|fi|fr|he|hr|hu|it|ja|ko|nl|no|pl|pt|ru|sl|sv|th|tr|zh" id="tmdbplotlanguage" default="en" visible="eq(-1,1)"/>
     <setting type="sep"/>
       <setting label="30015" type="labelenum" values="IMDb|IMDbFull|themoviedb.org" id="creditssource" default="IMDb"/>
     <setting type="sep"/>
       <setting label="30022" type="labelenum" values="IMDb|themoviedb.org|trakt.tv" id="genressource" default="IMDb"/>
-      <setting label="30040" type="labelenum" values="cs|da|de|el|en|es|fi|fr|he|hr|hu|it|ja|ko|nl|no|pl|pt|ru|sl|sv|tr|zh" id="tmdbgenreslanguage" default="en" visible="eq(-1,1)"/>
+      <setting label="30040" type="labelenum" values="bg|cs|da|de|el|en|es|fi|fr|he|hr|hu|it|ja|ko|nl|no|pl|pt|ru|sl|sv|th|tr|zh" id="tmdbgenreslanguage" default="en" visible="eq(-1,1)"/>
     <setting type="sep"/>
       <setting label="30013" type="bool" id="tmdbset" default="true"/>
   </category>
@@ -21,7 +21,7 @@
     <setting type="lsep" label="Poster Sources"/>
     <setting label="30037" type="bool" id="trakttvposter" default="false"/>
     <setting label="30002" type="bool" id="tmdbthumbs" default="true"/>
-    <setting label="30034" type="labelenum" values="cs|da|de|el|en|es|fi|fr|he|hr|hu|it|ja|ko|nl|no|pl|pt|ru|sl|sv|tr|zh" id="tmdbthumblanguage" default="en" enable="!eq(-1,false)"/>
+    <setting label="30034" type="labelenum" values="bg|cs|da|de|el|en|es|fi|fr|he|hr|hu|it|ja|ko|nl|no|pl|pt|ru|sl|sv|th|tr|zh" id="tmdbthumblanguage" default="en" enable="!eq(-1,false)"/>
     <setting label="30003" type="bool" id="impawards" default="false"/>
     <setting label="30004" type="bool" id="movieposterdb" default="false"/>
     <setting label="30036" type="bool" id="imdbthumbs" default="false"/>
@@ -34,7 +34,7 @@
     <setting label="30028" type="lsep"/>
     <setting label="30006" type="labelenum" values="No|480p|720p|1080p" id="TrailerQ" default="No"/>
     <setting label="30009" type="bool" id="tmdbtrailer" default="true"/>
-    <setting label="30041" type="labelenum" values="cs|da|de|el|en|es|fi|fr|he|hr|hu|it|ja|ko|nl|no|pl|pt|ru|sl|sv|tr|zh" id="tmdbtrailerlanguage" default="en" enable="!eq(-1,false)"/>
+    <setting label="30041" type="labelenum" values="bg|cs|da|de|el|en|es|fi|fr|he|hr|hu|it|ja|ko|nl|no|pl|pt|ru|sl|sv|th|tr|zh" id="tmdbtrailerlanguage" default="en" enable="!eq(-1,false)"/>
     <setting label="30039" type="bool" id="trakttvtrailer" default="false"/>
     <setting label="30005" type="bool" id="ytrailer" default="false"/>
   </category>
@@ -48,7 +48,7 @@
     <setting type="lsep" label="30031"/>
     <setting label="30032" type="labelenum" values="IMDb|themoviedb.org" id="certificationssource" default="IMDb"/>
       <setting label="30033" type="labelenum" values="Argentina|Australia|Austria|Belgium|Brazil|Bulgaria|Canada|China|Colombia|Chile|Croatia|Czech Republic|Denmark|Finland|France|Germany|Greece|Hong Kong|Hungary|Iceland|India|Israel|Italy|Japan|Mexico|Netherlands|Norway|Pakistan|Poland|Portugal|Romania|Russia|Serbia|Singapore|Slovenia|Spain|Sweden|Switzerland|Thailand|Turkey|UK|Uruguay|USA|Venezuela" id="imdbcertcountry" default="USA" visible="eq(-1,0)"/>
-      <setting label="30033" type="labelenum" values="au|cs|da|de|el|es|fi|fr|gb|he|hr|hu|it|ja|ko|nl|no|pl|pt|ru|sl|sv|tr|us|zh" id="tmdbcertcountry" default="us" visible="eq(-2,1)"/>/>
+      <setting label="30033" type="labelenum" values="au|bg|cs|da|de|el|es|fi|fr|gb|he|hr|hu|it|ja|ko|nl|no|pl|pt|ru|sl|sv|th|tr|us|zh" id="tmdbcertcountry" default="us" visible="eq(-2,1)"/>/>
     <setting label="30035" type="text" id="certprefix" default="Rated "/>
   </category>
 
