@@ -1,3 +1,6 @@
+[B]3.6.0[/B]
+- updated: out factored tagline scraping to common library
+
 [B]3.5.0[/B]
 - added: aspect tag and reorder languages according to the alphabet
 
